# MindXLib

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_CN.md  blog.md  mindxlib_introduction.md  pyproject.toml  requirements.txt  requirements_old.txt  setup.py
dataset/: tic_tac_toe.csv
demo/: Lime for tabular example.ipynb  Lime for text example.ipynb  Shap for deep models.ipynb  Shap for permutation explainers.ipynb  Shap for tree-based models.ipynb  Shap kernel explainers.ipynb  diver_test.py  drillup_test.py  extract_rule_test.py  ruleList_SSRL_test  ruleList_SSRL_test.py  ruleset_imb.py  ruleset_imb_test.py  ruleset_test.py  test_ruleset_imb.py  wkmodes_rule_test.py
doc/source/: conf.py  index.rst  mindxlib.post_hoc_explainer.rst  mindxlib.pre_mining.rst  mindxlib.rulelist.rst
docs/examples/: diver.md  drillup.md  fdtemp.md  gam.md  ig.md  lime.md  rulelist.md  ruleset.md  ruleset_imb.md  shap.md
mindxlib/: __init__.py
mindxlib/base/: explainer.py  explanation.py
mindxlib/core/: assembler.py  base.py
mindxlib/data/: __init__.py  tic_tac_toe.py
mindxlib/data_handlers/: tabular.py
mindxlib/explainers/common_library_attribution/: __init__.py  ig.py  lime.py  shap.py
mindxlib/explainers/interactive_gam/: __init__.py  gam.py
mindxlib/explainers/rules/: __init__.py
mindxlib/explainers/rules/pre_mining/: wkmodes_rule.py
mindxlib/explainers/rules/rulelist/: __init__.py  rulelist_SSRL.py
mindxlib/explainers/rules/ruleset/: __init__.py  diver.py  drillup.py  ruleset.py  ruleset_imb.py
mindxlib/explainers/timeseries/: __init__.py  explain_utils.py  fdtempexplainer.py
mindxlib/post_hoc_explainer/: __init__.py  _lime.py  _shap.py
mindxlib/pre_mining/: extract_rule.py
mindxlib/rulelist/: __init__.py  ruleList_SSRL  ruleList_SSRL.py  rulelist_SSRL.py
mindxlib/ruleset/: __init__.py  diver.py  drillup.py  ruleset.py  ruleset_imb.py
mindxlib/utils/: __init__.py  datautil.py  features.py  models.py
mindxlib/visualization/: __init__.py  interactive.py  plots.py
mindxlib/visualization/assets/: styles.css
mindxlib/visualization/dash_vis_components/: CalHeatmap.py  DashVisComponents.py  LineChart.py  MyTextInput.py  Shape.py  ShapeEnsemble.py  Waterfall.py  __init__.py  _imports_.py  dash_vis_components.min.js  dash_vis_components.min.js.LICENSE.txt  metadata.json  package-info.json
tests/: test_ruleset.py
tests/test_explainers/: test_attribution.py  test_debug.py  test_debug2.py  test_diver.py  test_drillup.py  test_fdte.py  test_gam.py  test_ig.py  test_lime.py  test_rulelist.py  test_ruleset.py  test_ruleset_imb.py  test_shap.py
tests/test_explainers/test_model/: lstm-LKA.pt
