[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "mindxlib"
version = "0.1.0"
description = "A library for explainable AI methods"
authors = [
    {name = "Alibaba Damo Academy", email = "guxinyue.gxy@alibaba-inc.com"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "dash==3.0.0",
    "dash_bootstrap_components>=1.0.0", 
    "dask==2025.3.0",
    "lime>=0.2.0",
    "matplotlib~=3.10.1",
    "mip>=1.14.0",
    "mlxtend==0.23.4",
    "numba==0.61.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pyroaring>=0.2.11",
    "scikit_learn>=0.24",
    "scipy==1.15.2",
    "setuptools~=74.1.2",
    "shap>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[project.urls]
"Bug Reports" = "https://github.com/DAMO-DI-ML/mindxlib/issues"
"Source" = "https://github.com/DAMO-DI-ML/mindxlib"

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]

[tool.setuptools_scm]
write_to = "mindxlib/_version.py"